fix overflow issue

--- a/website/style/style.css
+++ b/website/style/style.css
@@ -7,7 +7,6 @@ body{
 }
 
 #head{
-    overflow: hidden;
     background-color: dimgrey;
     position: fixed;
     z-index: 1;
